# check_numeric_filenames

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
check_numeric_filenames/: __init__.py  check_numeric_filenames.py
